# rage

./: .gitlab-ci.yml  .travis.yml  README  README.md  gen_hash_header.sh  header_flattener.py  meson.build  stoat_check.sh
elements/amp/: amp.c
elements/matrix/: matrix.c
elements/persistence/: persistence.c  test_persistence.c
example/: main.c
graph/include/: binding_interface.h  buffer_pile.h  bulk_backend.h  categorisation.h  con_trans.h  depmap.h  engine.h  event.h  graph.h  graph_test_factories.h  harness.h  jack_bindings.h  loader.h  proc_block.h  queue.h  srt.h  wiring.h
graph/src/: binding_interface.c  buffer_pile.c  bulk_backend.c  categorisation.c  depmap.c  engine.c  event.c  graph.c  graph_test_factories.c  harness.c  jack_bindings.c  loader.c  proc_block.c  queue.c  rt.c  srt.c  wiring.c
graph/test/: main.c  pdls.c  test_buffer_pile.c  test_bulk_backend.c  test_categorisation.c  test_depmap.c  test_engine.c  test_graph.c  test_harness.c  test_jack_bindings.c  test_loader.c  test_queue.c  test_srt.c
haskwrap/include/: refcounter.h  wrappers.h
haskwrap/src/: refcounter.c  wrappers.c
haskwrap/test/: test_refcounter.c
include/: atoms.h  element.h  elements.h  error.h  events.h  interpolation.h  loader.h  macros.h  ports.h  time.h
langext/include/: barrier.h  countdown.h  error.h  finaliser.h  macros.h  rtcrit.h  set.h  testing.h
langext/src/: countdown.c  finaliser.c  rtcrit.c  set.c
langext/test/: main.c  test_array.c  test_countdown.c  test_errors.c  test_rtcrit.c  test_set.c  test_synchronisation_primitives.c
src/: events.c  interpolation.c  loader.c  ports.c  time.c
test/: test_elements.c  test_errors.c  test_interpolation.c  test_loader.c  test_time.c
types/include/: atoms.h  binary_semaphore.h  chronology.h  element.h  element_helpers.h  element_impl.h  event.h  events.h  finaliser.h  interpolation.h  macros.h  ports.h  queue.h  test_factories.h  time.h  time_series.h  transport_state.h
types/src/: atoms.c  barrier.c  chronology.c  countdown.c  element_helpers.c  event.c  events.c  finaliser.c  interpolation.c  ports.c  queue.c  test_factories.c  time.c  time_series.c
types/test/: test_chronology.c  test_errors.c  test_interpolation.c  test_main.c  test_ports.c  test_queue.c  test_test_factories.c  test_time.c
